// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`экшен OFFER_AUTORENEW_ACTIVATE обновляет не пустой state 1`] = `
Object {
  "saleId": "offer-id-mock",
  "service_schedules": Object {
    "products": Object {
      "all_sale_fresh": Object {
        "once_at_time": Object {
          "time": "01:00",
        },
      },
      "foo": Object {},
    },
  },
}
`;

exports[`экшен OFFER_AUTORENEW_ACTIVATE обновляет пустой state 1`] = `
Object {
  "saleId": "offer-id-mock",
  "service_schedules": Object {
    "products": Object {
      "all_sale_fresh": Object {
        "once_at_time": Object {
          "time": "01:00",
        },
      },
    },
  },
}
`;

exports[`экшен OFFER_PRICE_UPDATE обновляет цену оффера 1`] = `
Object {
  "price_info": Object {
    "RUR": 123,
    "USD": 42,
    "currency": "USD",
    "price": 42,
  },
  "saleId": "offer-id-mock",
}
`;
